# pf_imgui

./: .clang-format  .gitignore  .travis.yml  AbsoluteLayout_8h.html  AbsoluteLayout_8h_source.html  AnchorLayout_8h.html  AnchorLayout_8h_source.html  ArrayPin_8h_source.html  BackgroundDockingArea_8h.html  BackgroundDockingArea_8h_source.html  Bar_8h.html  Bar_8h_source.html  Bullet_8h.html  Bullet_8h_source.html  Button_8h.html  Button_8h_source.html  CMakeLists.txt  CheckboxPin_8h_source.html  Checkbox_8h.html  Checkbox_8h_source.html  Clickable_8h.html  Clickable_8h_source.html  Closeable_8h_source.html  Collapsible_8h.html  Collapsible_8h_source.html  ColorChooser_8h.html  ColorChooser_8h_source.html  ColorPalette_8h.html  ColorPalette_8h_source.html  Color_8h.html  Color_8h_source.html  Combobox_8h.html  Combobox_8h_source.html  CommandPaletteWindow_8h.html  CommandPaletteWindow_8h_source.html  CommandPalette_8h.html  CommandPalette_8h_source.html  Comment_8h.html  Comment_8h_source.html  ConfigConstruction_8h.html  (+1025 more)
.PVS-Studio/: suppress_base.json
.github/workflows/: codacy.yml  docs.yml  macos-build.yml  msvc.yml  pvs-studio.yml  ubuntu-build.yml  windows-build.yml  windows-build.yml_disabled
docs/: AbsoluteLayout_8h.html  AbsoluteLayout_8h__dep__incl.map  AbsoluteLayout_8h__dep__incl.md5  AbsoluteLayout_8h__incl.map  AbsoluteLayout_8h__incl.md5  AbsoluteLayout_8h_source.html  AnchorLayout_8h.html  AnchorLayout_8h__incl.map  AnchorLayout_8h__incl.md5  AnchorLayout_8h_source.html  Bar_8h.html  Bar_8h__dep__incl.map  Bar_8h__dep__incl.md5  Bar_8h__incl.map  Bar_8h__incl.md5  Bar_8h_source.html  BoxLayout_8h.html  BoxLayout_8h__dep__incl.map  BoxLayout_8h__dep__incl.md5  BoxLayout_8h__incl.map  BoxLayout_8h__incl.md5  BoxLayout_8h_source.html  Bullet_8h.html  Bullet_8h__dep__incl.map  Bullet_8h__dep__incl.md5  Bullet_8h__incl.map  Bullet_8h__incl.md5  Bullet_8h_source.html  Button_8h.html  Button_8h__dep__incl.map  Button_8h__dep__incl.md5  Button_8h__incl.map  Button_8h__incl.md5  Button_8h_source.html  Checkbox_8h.html  Checkbox_8h__dep__incl.map  Checkbox_8h__dep__incl.md5  Checkbox_8h__incl.map  Checkbox_8h__incl.md5  Checkbox_8h_source.html  (+1339 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+81 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+86 more)
src/imgui/: ImGuiInterface.h  serialization.h  ui_tree_traversal.h
src/imgui/elements/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  ColorChooser.h  ComboBox.h  Dialog.cpp  Dialog.h  DragInput.h  Group.h  Image.cpp  Image.h  Input.h  InputText.h  ListBox.cpp  ListBox.h  Memo.cpp  Memo.h  MenuBars.h  Panel.cpp  Panel.h  Plot.cpp  Plot.h  ProgressBar.h  RadioButton.cpp  RadioButton.h  RadioGroup.h  Slider.h  TabBar.cpp  TabBar.h  Text.cpp  Text.h  Tree.h  Window.cpp  Window.h
src/include/DearWidgets/: dear_widgets.cpp  dear_widgets.h  dear_widgets.hpp
src/include/ImGUiFlamegraph/: imgui_widget_flamegraph.cpp  imgui_widget_flamegraph.h
src/include/ImGuiColorTextEdit/: ImGuiColorTextEditor.cpp  ImGuiColorTextEditor.h  TextEditor.cpp
src/include/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
src/include/ImGuiFlamegraph/: LICENSE  imgui_widget_flamegraph.cpp  imgui_widget_flamegraph.h
src/include/ImGuizmo/: ImCurveEdit.cpp  ImCurveEdit.h  ImGradient.cpp  ImGuizmo.cpp  ImGuizmo.h  ImSequencer.cpp  ImZoomSlider.h
src/include/imGuIZMO.quat/: imGuIZMOquat.cpp  vGizmo.h  vgConfig.h  vgMath.h
src/include/imgInspect/: LICENSE  imgInspect.h
src/include/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
src/include/imgui-command-palette/: LICENSE  imcmd_command_palette.cpp  imcmd_command_palette.h
src/include/imgui-knobs/: imgui-knobs.cpp  imgui-knobs.h
src/include/imgui-node-editor/: crude_json.cpp  crude_json.h  imgui_bezier_math.inl  imgui_node_editor.cpp
src/include/imgui_addons/: imguidatechooser.cpp  imguidatechooser.h
src/include/imgui_color_gradient/: imgui_color_gradient.cpp  imgui_color_gradient.h
src/include/imgui_curve_editor/: ImGuiCurveEditor.cpp
src/include/imgui_markdown/: imgui_markdown.h
src/include/imgui_memory_editor/: LICENSE  imgui_memory_editor.h
src/include/imgui_notify/: LICENSE  imgui_notify.h
src/include/implot/: implot.cpp
src/include/ringbuffer/: ringbuffer.hpp
src/pf_imgui/: Color.cpp  Color.h  DockBuilder.cpp  DockBuilder.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  ImGuiInterface.cpp  ImGuiInterface.h  Label.cpp  Label.h  NotificationManager.cpp  NotificationManager.h  Position.cpp  Position.h  Size.cpp  Size.h  Texture.h  elements.h  enums.h  exceptions.h  fwd.h  icons.h  layouts.h  meta.h  serialization.h  ui_tree_traversal.h  unique_id.h
src/pf_imgui/backends/: ImGuiGlfwOpenGLInterface.cpp  ImGuiGlfwOpenGLInterface.h  ImGuiGlfwVulkanInterface.cpp  ImGuiGlfwVulkanInterface.h  ImGuiSDLInterface.cpp  ImGuiSDLInterface.h
src/pf_imgui/common/: Color.cpp  Color.h  Font.cpp  Font.h  Label.h  Position.cpp  Position.h  Size.h  Tags.h
src/pf_imgui/concepts/: ConfigConstruction.h  HasSizeObservable.h
src/pf_imgui/details/: ComboFilter.h  CustomIconButtonImpls.cpp  CustomIconButtonImpls.h  DataTypeSize.h  (+15 more)
(+393 files in other folders)
